--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proyecto-web-server",
   "version": "0.0.1",
   "description": "Proyecto de Web Server (servidor web) para NodeJS",
-  "type": "commonjs",
+  "type": "module",
   "main": "src/app.js",
   "scripts": {
     "dev": "nodemon src/app.js"
